allow real time clock source to be selected by properties